gcc/testsuite/g++.old-deja/g++.jason/rfg12.C
// { dg-do assemble  }
int array[3] = { 1, 2, 3, 4 };	/* { dg-error "" } excess initializer elements */
